[package]
name = "drone-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7",  features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"

defmt = "0.3.5"
defmt-rtt = "0.4.0"

embassy-executor = { version = "0", features = ["nightly", "defmt", "arch-cortex-m", "executor-interrupt", "executor-thread", "integrated-timers"] }
embassy-net = { version = "0", features = ["nightly", "defmt", "dhcpv4", "medium-ethernet", "tcp"] }
embassy-stm32 = { version = "0", features = ["nightly", "defmt", "unstable-pac", "unstable-traits", "stm32f411ce", "chrono", "embedded-sdmmc", "exti", "memory-x", "time-driver-any"] }
embassy-sync = { version = "0", features = ["defmt"] }
embassy-time = { version = "0", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-usb = { version = "0", features = ["defmt"] }

chrono = { version = "0.4.30", default-features = false }
embedded-hal = "0.2.7"
embedded-io = { version = "0.5.0" }
embedded-io-async = { version = "0.5.0" }
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.16", default-features = false }
micromath = { version = "2.0.0" }
panic-probe = {version = "0.3.1", features = ["print-defmt"] }
